--- a/PROYECTOFINAL/app/src/main/AndroidManifest.xml
+++ b/PROYECTOFINAL/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
         <uses-permission android:name="android.permission.INTERNET" />
         <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
-        <activity android:name=".Agregar"></activity>
+        <activity android:name=".Agregar" />
+        <activity android:name=".Listar"></activity>
     </application>
 
 </manifest>
