--- a/PROYECTOFINAL/app/src/main/AndroidManifest.xml
+++ b/PROYECTOFINAL/app/src/main/AndroidManifest.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.a41638707.proyectofinal">
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -17,10 +19,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
         <activity android:name=".Agregar" />
-        <activity android:name=".Listar"></activity>
+        <activity android:name=".Listar" />
+        <activity android:name=".Modificar"></activity>
     </application>
 
 </manifest>
