--- a/PROYECTOFINAL/app/src/main/AndroidManifest.xml
+++ b/PROYECTOFINAL/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         </activity>
         <activity android:name=".Agregar" />
         <activity android:name=".Listar" />
-        <activity android:name=".Modificar"></activity>
+        <activity android:name=".Modificar"/>
     </application>
 
 </manifest>
